<resources>
    <string name="app_name">Kasko2go</string>
    <string name="ticker_text">Data on your driving style is being collected</string>

    <string name="error_title">Error</string>
    <string name="error_server_unknown">An error occurred while scoring your driving style. \nTry again.</string>
    <string name="error_server_error">An error occurred while scoring your driving style. \nTry again.</string>
    <string name="error_location_connect">Error of gps location service response. \nTry again.</string>
    <string name="error_price_is_low">Cat price should be more than €5000.</string>
    <string name="error_price_is_empty">Car price is empty.</string>
    <string name="error_price_is_invalid">Car price is wrong value.</string>
    <string name="error_not_telegram">Telegram app is not installed.</string>
    <string name="error_low_gps">For an accurate scoring of your driving style, \nthe GPS signal strength should be more than 90%.</string>

    <string name="error_trip_time">For an accurate scoring of your driving style, \nmake at least a five-minute trip.</string>

    <string name="splash_description">This application is a part of kasko2go complex product and demonstrates only basic telematics functionality.\nDue to demo purpose, all information is given simplified and should be used as a reference only.\nEnjoy your safe ride!</string>
    <string name="splash_made">Swiss made</string>
    <string name="splash_continue">Tap to continue</string>

    <string name="start_title">Safe drivers pay less with \nkasko2go..</string>
    <string name="start_Info">Check your driving style \nand see how much you save.</string>
    <string name="start_car_price_info">Enter your car value. \n€5 000 – €250 000</string>
    <string name="start_history">Trip history</string>

    <string name="trip_title">Data on your driving style is being collected.</string>
    <string name="trip_info">Take a trip five to thirty minutes in duration.\n\nAt the end of the trip, tap Stop, and we will evaluate your driving style.\n\nPosition your phone so that the GPS signal level is at least 90%.</string>
    <string name="gps_level_title">GPS</string>
    <string name="trip_timer_title">Trip</string>
    <string name="trip_low_gps_hint">The GPS reception is below 90%. The condition is not met;\nthe calculation will not be made.</string>

    <string name="trip_finish_fail">Alas, your driving style \n is not safe</string>
    <string name="trip_finish_success_50">Not bed</string>
    <string name="trip_finish_success_65">Congratulations! \nYou have a good driving style!</string>
    <string name="trip_finish_success_80">Congratulations! \nYou are an excellent driver!</string>

    <string name="trip_finish_driving_style">Driving style</string>
    <string name="trip_finish_trip">Trip</string>
    <string name="trip_finish_travel_time">Traveling time</string>
    <string name="trip_finish_traffic_time">Time spent in traffic</string>
    <string name="trip_finish_discount">Discount: (%)</string>
    <string name="trip_finish_total_discount">Discount</string>
    <string name="trip_finish_discount_info">The cost is an indication so that you can assess potential savings.</string>

    <string name="trip_finish_title_100">Congrats!\nYou are an excellent driver!</string>
    <string name="trip_finish_title_80">Congrats!\nYou have a good driving style.</string>
    <string name="trip_finish_title_65">Not bad.</string>
    <string name="trip_finish_title_50">Alas, your driving style is not safe.</string>

    <string name="trip_finish_next_info_100">You’ve scored above 80, \nyou will receive a reward.</string>
    <string name="trip_finish_next_info_80">Score 80 or more to get a reward.</string>

    <string name="trip_finish_next_100">Get a reward</string>
    <string name="trip_finish_next_80">Next</string>

    <string name="reward_title">Three simple steps to get a reward:</string>
    <string name="reward_step_1">1. Take a screenshot.</string>
    <string name="reward_step_23">2. Share our Telegram channel. \n \n3. Become a good driver and get €5 in ETH.</string>
    <string name="reward_one_day">1 winner a day</string>
    <string name="reward_join_telegram">Join our Telegram</string>
    <string name="reward_take_another">Take another trip</string>

    <string name="minutes">min</string>
    <string name="total_discount_price">Total: €%.2f</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>

</resources>
