<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/large_block_margin"
        android:layout_marginRight="@dimen/large_block_margin"
        android:layout_marginTop="@dimen/large_block_margin"
        android:gravity="center_horizontal"
        android:text="@string/start_title" />

    <TextView
        android:id="@+id/startInfo"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/large_block_margin"
        android:layout_marginRight="@dimen/large_block_margin"
        android:layout_marginTop="@dimen/block_margin"
        android:gravity="center_horizontal"
        android:text="@string/start_Info" />

    <TextView
        android:id="@+id/carPriceInfo"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginLeft="@dimen/large_block_margin"
        android:layout_marginRight="@dimen/large_block_margin"
        android:layout_marginTop="@dimen/large_block_margin"
        android:gravity="center_horizontal"
        android:text="@string/start_car_price_info" />

    <EditText
        android:id="@+id/carPriceEdit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carPriceInfo"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:ems="10"
        android:inputType="number"
        android:paddingHorizontal="32dp"
        android:singleLine="true"
        android:text="5000"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_headline" />

    <ImageView
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/large_block_margin"
        android:src="@drawable/ic_start_driving" />

</RelativeLayout>
