<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:layout_margin="@dimen/standard_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:id="@+id/textTitle"
                style="@style/textNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/trip_finish_success_80"
                android:textColor="@color/green" />

            <FrameLayout
                android:id="@+id/statistic_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textTitle"
                />

            <TextView
                android:id="@+id/discount_info"
                style="@style/textCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_below="@+id/statistic_container"
                android:text="@string/trip_finish_discount_info" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/nextTextInfo"
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/card_info"
        android:text="@string/trip_finish_success_next" />

    <TextView
        android:id="@+id/nextButton"
        style="@style/TitleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nextTextInfo"
        android:text="@string/next"
        />

</RelativeLayout>
</android.support.v4.widget.NestedScrollView>
